hard-gists/10010307/run.log
=== Docker Run Log for 10010307 ===
Started at: Mi 29. Okt 11:44:10 CET 2025

[2025-10-29 11:44:10] START: Running container for 10010307
[2025-10-29 11:44:10] SUCCESS: Container dc7aa5214bd8516f05a3b38e35f5d78eadd398eff8693e3de933cb1315240b6a started for 10010307
=== Container logs for 10010307 ===
  File "/snippet.py", line 57
    print 'Interface: %s' % wifi.get_interface()
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 10010307 ===
[2025-10-29 11:44:12] INFO: Container dc7aa5214bd8516f05a3b38e35f5d78eadd398eff8693e3de933cb1315240b6a has stopped
